--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "voiceservice",
   "version": "0.0.1",
-  "description": "",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
@@ -9,8 +8,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "voiceit2-nodejs": "^2.3.5",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "multiparty": "^4.2.1"
-  }
+    "multiparty": "^4.2.1",
+    "request": "2.88.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/animatedboy/testApp.git"
+  },
+  "bugs": {
+    "url": "https://github.com/animatedboy/testApp/issues"
+  },
+  "homepage": "https://github.com/animatedboy/testApp#readme",
+  "description": ""
 }
