--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "multiparty": "^4.2.1",
-    "request": "2.88.0"
+    "request": "2.88.0",
+    "mongodb": "3.3.4"
   },
   "repository": {
     "type": "git",
